simplifies the example configuration and readme

--- a/example_configurations/REST_API/config_curl_upgrade_CONCURRENT.json
+++ b/example_configurations/REST_API/config_curl_upgrade_CONCURRENT.json
@@ -4,9 +4,13 @@
             {
                 "hostname": "0.0.0.0",
                 "port": 1054
+            },
+            {
+                "hostname": "0.0.0.0",
+                "port": 1055
             }
         ],
-        "version": "3.9.2",
+        "version": "2.0",
         "upgradeTransition": {
             "mode": "CONCURRENT"
         }
