trying to fix docker container

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,12 +9,16 @@ FROM samirabloom/docker-go
 MAINTAINER Samira Rabbanian "samira.rabanian@gmail.com"
 
 # Setup correct GOPATH
-ENV GOPATH /home/goworld
+ENV GOPATH /home/goworld/src/github.com/samirabloom/doxy:/home/goworld
 
 # install dependencies
-RUN go get code.google.com/p/go-uuid/uuid && \
-    go get github.com/op/go-logging && \
-    go get github.com/samirabloom/doxy
+RUN go get -v code.google.com/p/go-uuid/uuid && \
+    go get -v github.com/op/go-logging && \
+	go get -v github.com/fsouza/go-dockerclient && \
+	go get -v github.com/franela/goreq && \
+    go get -v github.com/samirabloom/doxy && \
+    cd /usr/local/go_path/src/github.com/samirabloom/doxy && \
+    make
 
 VOLUME /config
 
