finally fixed docker container and corrected config file format

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,15 +9,11 @@ FROM samirabloom/docker-go
 MAINTAINER Samira Rabbanian "samira.rabanian@gmail.com"
 
 # Setup correct GOPATH
-ENV GOPATH /home/goworld/src/github.com/samirabloom/doxy:/home/goworld
+ENV GOPATH /home/goworld
 
 # install dependencies
-RUN go get -v code.google.com/p/go-uuid/uuid && \
-    go get -v github.com/op/go-logging && \
-	go get -v github.com/fsouza/go-dockerclient && \
-	go get -v github.com/franela/goreq && \
-    go get -v github.com/samirabloom/doxy && \
-    cd /usr/local/go_path/src/github.com/samirabloom/doxy && \
+RUN git clone https://github.com/samirabloom/doxy && \
+    cd doxy && \
     make
 
 VOLUME /config
