--- a/example_configurations/configFile/config_basic.json
+++ b/example_configurations/configFile/config_basic.json
@@ -1,4 +1,10 @@
 {
+    "proxy": {
+        "port": 1235
+    },
+    "configService": {
+        "port": 9090
+    },
     "cluster": {
         "servers": [
             {
